--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ var lypopClose = function(e, _this) {
 						<a class="button primary" href="javascript:void(0)"  onclick="lypop(event, this)"  data-num="1">DETAIL</a>
 					</sapn>
 					<span class="view">
-						<a href="https://kyj933.github.io/absoult-vodka/" class="button primary">VIEW SITE</a>
+						<a href="link/source01/index.html" target="_blank" class="button primary">VIEW SITE</a>
 					</span>
 				</div>
 			</div>
@@ -196,7 +196,7 @@ var lypopClose = function(e, _this) {
 						<a class="button primary" href="javascript:void(0)"  onclick="lypop(event, this)"  data-num="2">DETAIL</a>
 					</sapn>
 					<span class="view">
-						<a href="https://kyj933.github.io/modern-house/" class="button primary">VIEW SITE</a>
+						<a href="link/source02/index.html" target="_blank" class="button primary">VIEW SITE</a>
 					</span>
 				</div>
 			</div>
