--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>KDK</title>
 <script src="js/jquery-3.2.1.min.js"></script>
 <link rel="stylesheet" href="css/default.css" type="text/css" />
 <script src="js/layout.js"></script>
