--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ var lypopClose = function(e, _this) {
 
 <div class="warp">
 	
-	<div class="page main">
+	<div class="page main box">
 		<div class="main_in">
 			<span class="whale">
 				<img src="img/wh01.png" alt="" />
@@ -100,7 +100,7 @@ var lypopClose = function(e, _this) {
 		</div>
 	</div>
 	
-	<div class="page porfile">
+	<div class="page porfile box">
 		<div class="profile_set">
 			<div class="pro_box left">
 				<p>김도경</p>
@@ -156,7 +156,7 @@ var lypopClose = function(e, _this) {
 			
 		</div>		
 	</div>
-	<div class="page portfolio sub1">
+	<div class="page portfolio sub1 box">
 		<div class="inner">
 			<div class="por_in left">
 				<div class="title">
@@ -180,7 +180,7 @@ var lypopClose = function(e, _this) {
 			</div>
 		</div>
 	</div>
-<div class="page portfolio sub2">
+<div class="page portfolio sub2 box">
 		<div class="inner">
 			<div class="por_in left">
 				<div class="title">
