--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ var lypopClose = function(e, _this) {
 	</nav>
 	<nav>
 	  <ul>
-		<li class="active"><a href="">INTRO</a></li>
+		<li><a href="">INTRO</a></li>
 		<li><a href="">PORFILE</a></li>
 		<li><a href="">PORTFOLIO </a></li>
 	  </ul>
