--- a/link/source02/index.html
+++ b/link/source02/index.html
@@ -34,11 +34,11 @@
       <div>
           <div class="logo"><img src="img/logo.png" alt=""></div>
 		  <ul>
-          <li><a href="#">가구</a></li>
-          <li><a href="#">주방잡화</a></li>
-          <li><a href="#">욕실</a></li>
-          <li><a href="#">인테리어</a></li>
-		  <li><a href="#">라이프</a></li>
+          <li><a class="btn trigger" href="javascript:;">가구</a></li>
+          <li><a class="btn trigger" href="javascript:;">주방잡화</a></li>
+          <li><a class="btn trigger" href="javascript:;">욕실</a></li>
+          <li><a class="btn trigger" href="javascript:;">인테리어</a></li>
+		  <li><a class="btn trigger" href="javascript:;">라이프</a></li>
         </ul>
       </div>
     </div>
@@ -57,17 +57,20 @@
 		  <div class="item t1">
 			  <p class="mtxt t1">포토리뷰 작성시</p>
 			  <p class="mtxt t2">적립금 증정<br>이벤트</p>
-			  
+			  <a class="btn trigger" href="javascript:;"></a>
 		   </div>
 		  <div class="item t2">
 			  <p class="mtxt t1">공간에 생활을 더 하다<br>Modern 가구 기획전</p>
+			  <a class="btn trigger" href="javascript:;"></a>
 			</div>
 		  <div class="item t3">
 				<p class="mtxt t1">나만의 작은 정원<br>홈가든</p>
+			  <a class="btn trigger" href="javascript:;"></a>
 		  </div>
 		  <div class="item t4">
 				<p class="mtxt t1">오늘의 특가</p>
 			  <p class="mtxt t2">최대 50% 할인</p>
+			  <a class="btn trigger" href="javascript:;"></a>
 			</div>
 		</div>
     </div>
@@ -76,20 +79,20 @@
 		<div class="p2_in">
 			<ul class="icon">
 				<li class="icon t1">
-					<a href="javascript:void(0)"><img src="img/n_icon.png" alt=""></a>
+					<a class="btn trigger" href="javascript:;"><img src="img/n_icon.png" alt=""></a>
 					<p>신상품</p>
 				</li>
 				<li class="icon t2">
-					<a href="javascript:void(0)"><img src="img/b_icon.png" alt=""></a>
+					<a class="btn trigger" href="javascript:;"><img src="img/b_icon.png" alt=""></a>
 					<p>베스트</p>
 				</li>
 				<li class="icon t3">
-					<a href="javascript:void(0)"><img src="img/m_icon.png" alt=""></a>
+					<a class="btn trigger" href="javascript:;"><img src="img/m_icon.png" alt=""></a>
 					<p>MD 추천</p>
 				</li>
 			</ul>
 			<div class="jean-philippe">
-				<a href="javascript:void(0)"><div class="parallax-window" data-parallax="scroll" data-image-src="img/jean-philippe_1.jpg">
+				<a class="btn trigger" href="javascript:;"><div class="parallax-window" data-parallax="scroll" data-image-src="img/jean-philippe_1.jpg">
 					<h1>Jean-philippe</h1>
 					<p>컬렉션</p>
 				</div></a>
@@ -106,7 +109,7 @@
 			<div class="prdbox ty1">
 				<div class="grid">
 					<h3 class="hd3">인테리어</h3>
-					<button class="draw">바로가기</button>
+					<a class="btn trigger" href="javascript:;"><button class="draw">바로가기</button></a>
 				</div>
 				<div class="grid">
 					<div class="objset t1">
@@ -119,7 +122,7 @@
 			<div class="prdbox ty2">
 				<div class="grid">
 					<h3 class="hd3">가구</h3>
-					<button class="draw">바로가기</button>					
+					<a class="btn trigger" href="javascript:;"><button class="draw">바로가기</button></a>			
 				</div>
 				<div class="grid">
 					<div class="objset t2">
@@ -132,7 +135,7 @@
 			<div class="prdbox ty3">
 				<div class="grid">
 					<h3 class="hd3">주방</h3>
-					<button class="draw">바로가기</button>					
+					<a class="btn trigger" href="javascript:;"><button class="draw">바로가기</button></a>				
 				</div>
 				<div class="grid">
 					<div class="objset t3">
@@ -186,6 +189,24 @@
 		</div>
 	</footer>
 </div>
+
+
+ <a class="btn trigger" href="javascript:;"></a>
+
+<div class="modal-wrapper">
+  <div class="modal">
+    <div class="head">
+      <a class="btn-close trigger" href="javascript:;"></a>
+		<h1>modern house</h1>
+    </div>
+    <div class="content">
+		<p>홈페이지를 업데이트 중입니다.</p>
+		<p>COMING SOON</p>
+    </div>
+  </div>
+</div>	
+
+	
 <script src="js/scroll.js"></script>
 </body>
 </html>
